HW9 add three section

--- a/index.html
+++ b/index.html
@@ -57,28 +57,67 @@
             <img class="text_img" src="img/Super team.png" alt="">
         </div>-->
     </div>
-    <div class="numb_string">
-        <section>
+    <div id="numb_string">
+        <section class="numb_string">
             <h3>42</h3>
             <p>Lorem ipsum</p>
         </section>
-        <section>
+        <section class="numb_string">
             <h3>123</h3>
             <p>Lorem ipsum</p>
         </section>
-        <section>
+        <section class="numb_string">
             <h3>15</h3>
             <p>Lorem ipsum</p>
         </section>
-        <section>
+        <section class="numb_string">
             <h3>99</h3>
             <p>Lorem ipsum</p>
         </section>
-        <section>
+        <section class="numb_string">
             <h3>24</h3>
             <p>Lorem ipsum</p>
         </section>
     </div>
+    <div class="mixin_text">
+    <h2>We worck with</h2>
+    <h4>AMAZING SERVICES</h4>
+    <hr>
+    </div>
+    <section class="amazing_services">
+        <div>
+            <img class="icon" src="img/one.png" alt="">
+            <h3>PHOTOGRAPHY</h3> <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div>
+            <img class="icon" src="img/two.png" alt="">
+            <h3>WEB DESIGN</h3> <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div>
+            <img class="icon" src="img/three.png" alt="">
+            <h3>CREATIVITY</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </section>
+    <section class="amazing_services">
+        <div>
+            <img class="icon" src="img/four.png" alt="">
+            <h3>SEO</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div>
+            <img class="icon" src="img/five.png" alt="">
+            <h3>CSS/HTML</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div>
+            <img class="icon" src="img/six.png" alt="">
+            <h3>DIGITAL</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </section>
     </main>
 </body>
 </html>
