add five section

--- a/index.html
+++ b/index.html
@@ -48,14 +48,30 @@
     </div>
     <p class="about_us">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu facilisis sed venenatis lacus. Eget sit ridiculus facilisi amet. Dis sapien ipsum enim dui fermentum viverra dolor sit. Aliquet congue sit fermentum risus feugiat.</p>
     <div class="super_team">
-        <img class="team" src="img/unsplash_ACt8ycSzpdE.png" alt="picture">
-        <img class="team" src="img/unsplash_T5nXYXCf50I.png" alt="picture">
-        <img class="team" src="img/unsplash_ACt8ycSzpdE.png" alt="picture">
-        <!--<div class="active_hov">
-            <img class="bgimg" src="img/Rectangle 5.png" alt="">
+        <div class="super_team__one">
+        <img class="team_one" src="img/unsplash_ACt8ycSzpdE.png" alt="picture">
+        <div class="active_one">
+            <img class="bgimg" src="img/Rectangle5.png" alt="">
             <img class="people_img" src="img/peolpe.png" alt="">
-            <img class="text_img" src="img/Super team.png" alt="">
-        </div>-->
+            <img class="text_img" src="img/Superteam.png" alt="">
+        </div>
+        </div>
+        <div class="super_team__two">
+        <img class="team_two" src="img/unsplash_T5nXYXCf50I.png" alt="picture">
+        <div class="active_two">
+            <img class="bgimg" src="img/Rectangle5.png" alt="">
+            <img class="people_img" src="img/peolpe.png" alt="">
+            <img class="text_img" src="img/Superteam.png" alt="">
+        </div>
+        </div>
+        <div class="super_team__three">
+            <img class="team_two" src="img/unsplash_ACt8ycSzpdE.png" alt="picture">
+            <div class="active_three">
+                <img class="bgimg" src="img/Rectangle5.png" alt="">
+                <img class="people_img" src="img/peolpe.png" alt="">
+                <img class="text_img" src="img/Superteam.png" alt="">
+            </div>
+            </div>
     </div>
     <div id="numb_string">
         <section class="numb_string">
@@ -118,6 +134,77 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </section>
+    <div class="design">
+        <div class="mixin_text">
+        <h2>For all devices</h2>
+        <h3>UNIQUE DESIGN</h3>
+        <hr>
+        </div>
+        <div class="design_tablet">
+        <picture>
+            <source media="(min-width:1025px)" srcset="img/ramcont.png">
+            <source media="(max-width:1024px)" srcset="img/1024/ramcont.png">
+            <source media="(mix-width:320px)" srcset="img/320/ramcont.png">
+            <img class="design_tablet_cont" src="img/ramcont.png" alt="tablet">
+        </picture>
+        <picture>
+            <source media="(min-width:1025px)" srcset="img/ram.png">
+            <source media="(max-width:1024px)" srcset="img/1024/ram.png">
+            <source media="(mix-width:320px)" srcset="img/320/ram.png">
+            <img class="design_tablet_ram" src="img/ram.png" alt="tablet">
+        </picture>
+        </div>
+        <div class="design_mobile">
+        <picture>
+            <source media="(min-width:1025px)" srcset="img/ram1cont.png">
+            <source media="(max-width:1024px)" srcset="img/1024/ram1cont.png">
+            <source media="(mix-width:320px)" srcset="img/320/ram1cont.png">
+            <img class="design_mobile_cont" src="img/ram1cont.png" alt="phone">
+        </picture>
+        <picture>
+            <source media="(min-width:1025px)" srcset="img/ram1.png">
+            <source media="(max-width:1024px)" srcset="img/1024/ram1.png">
+            <source media="(mix-width:320px)" srcset="img/320/ram1.png">
+            <img class="design_mobile_ram" src="img/ram1.png" alt="phone">
+        </picture>
+        </div>
+    </div>
+    <div class="service">
+    <div class="mixin_text">
+        <h2>Service</h2>
+        <h3>WHAT WE DO</h3>
+        <hr>
+    </div>
+    <p class="about_us">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu facilisis sed venenatis lacus. Eget sit ridiculus facilisi amet. Dis sapien ipsum enim dui fermentum viverra dolor sit. Aliquet congue sit fermentum risus feugiat.</p>
+    <div class="service__about">
+    <picture>
+        <source media="(min-width:1025px)" srcset="img/service.png">
+        <source media="(max-width:1024px)" srcset="img/1024/service.png">
+        <source media="(mix-width:320px)" srcset="img/320/service.png">
+        <img src="img/service.png" alt="what we do">
+    </picture>
+    <div class="service_info">
+    <div class="photography">
+        <img src="img/one_icon.png" alt="">
+        <p>PHOTOGRAPHY</p>
+        <img class="arrХow" src="img/up.png" alt="">
+        <div class="info_txt">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eros, nunc, rhoncus, id tincidunt tellus rhoncus ornare. Amet, et elementum enim mattis. Purus volutpat sagittis ut adipiscing congue euismod sit enim fringilla. Proin viverra nibh in vel ut pulvinar nec senectus. Justo, id ac facilisis fringilla fermentum sed nunc aenean.</p>
+        </div>
+    </div>
+    <div class="creativity">
+        <img src="img/two_icon.png" alt="">
+        <p>CREATIVITY</p>
+        <img class="arrow" src="img/down.png" alt="">
+    </div>
+    <div class="web">
+        <img src="img/three_icon.png" alt="">
+        <p>WEB-DESIGN</p>
+        <img class="arrow" src="img/down.png" alt="">
+    </div>
+    </div>
+    </div>
+    </div>
     </main>
 </body>
 </html>
