update add new section

--- a/index.html
+++ b/index.html
@@ -188,10 +188,8 @@
         <img src="img/one_icon.png" alt="">
         <p>PHOTOGRAPHY</p>
         <img class="arrХow" src="img/up.png" alt="">
-        <div class="info_txt">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eros, nunc, rhoncus, id tincidunt tellus rhoncus ornare. Amet, et elementum enim mattis. Purus volutpat sagittis ut adipiscing congue euismod sit enim fringilla. Proin viverra nibh in vel ut pulvinar nec senectus. Justo, id ac facilisis fringilla fermentum sed nunc aenean.</p>
-        </div>
     </div>
+    <p class="info_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eros, nunc, rhoncus, id tincidunt tellus rhoncus ornare. Amet, et elementum enim mattis. Purus volutpat sagittis ut adipiscing congue euismod sit enim fringilla. Proin viverra nibh in vel ut pulvinar nec senectus. Justo, id ac facilisis fringilla fermentum sed nunc aenean.</p>
     <div class="creativity">
         <img src="img/two_icon.png" alt="">
         <p>CREATIVITY</p>
@@ -204,7 +202,227 @@
     </div>
     </div>
     </div>
+    <div class="jon_doe">
+        <div class="jon_doe_arrows_l"></div>
+        <img src="img/massange.png" alt="">
+        <section>
+            <p class="jon_doe_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque nec diam platea ullamcorper feugiat amet. Id aliquet vehicula feugiat arcu arcu nulla ornare. Sed amet venenatis, massa sit.</p>
+            <hr class="jon_doe_hr">
+            <h4 class="jon_doe_h">Jon Doe</h4>
+        </section>
+        <div class="jon_doe_arrows_r"></div>
     </div>
+    </div>
+    <div class="mans"></div>
+    <div class="mixin_text">
+        <h2>Who we are</h2>
+        <h3>MEET OUR TEAM</h3>
+        <hr>
+    </div>
+    <p class="about_us">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu facilisis sed venenatis lacus. Eget sit ridiculus facilisi amet. Dis sapien ipsum enim dui fermentum viverra dolor sit. Aliquet congue sit fermentum risus feugiat.</p>
+    <div class="people">
+    <div class="people_one">
+        <img src="img/people1.png" alt="">
+        <div class="people_one_act">
+            <img src="img/Rectangle5bg.png" alt="">
+            <section class="social_contact">
+            <img src="img/facebookbg.png" alt="">
+            <img src="img/twitbg.png" alt="">
+            <img src="img/jambg.png" alt="">
+            <img src="img/instbg.png" alt="">
+        </section>
+        </div>
+        <h4>KADIN DIAS</h4>
+        <p>FOUNDER, CEO</p>
+    </div>
+    <div class="people_two">
+        <img src="img/pepole2.png" alt="">
+        <div class="people_two_act">
+            <img src="img/Rectangle5bg.png" alt="">
+            <section class="social_contact">
+            <img src="img/facebookbg.png" alt="">
+            <img src="img/twitbg.png" alt="">
+            <img src="img/jambg.png" alt="">
+            <img src="img/instbg.png" alt="">
+        </section>
+        </div>
+        <h4>ZAIN CALZONI</h4>
+        <p>DESIGNER</p>
+    </div>
+    <div class="people_three">
+        <img src="img/people3.png" alt="">
+        <div class="people_three_act">
+            <img src="img/Rectangle5bg.png" alt="">
+            <section class="social_contact">
+            <img src="img/facebookbg.png" alt="">
+            <img src="img/twitbg.png" alt="">
+            <img src="img/jambg.png" alt="">
+            <img src="img/instbg.png" alt="">
+        </section>
+        </div>
+        <h4>CHARLIE GEORGE</h4>
+        <p>PHOTOGRAPHER</p>
+    </div>
+</div>
+<div class="mans_icons">
+    <img src="img/Black and White Collection 2.png" alt="">
+    <img src="img/Black and White Collection 10.png" alt="">
+    <img src="img/Black and White Collection 12.png" alt="">
+    <img src="img/Black and White Collection 11.png" alt="">
+    <img src="img/Black and White Collection 13.png" alt="">
+    <img src="img/Black and White Collection 8.png" alt="">
+</div>
+</div>
+<div class="picture_area">
+    <div class="mixin_text">
+        <h2>What we do</h2>
+        <h3>SOME OF OUR WORKS</h3>
+        <hr>
+    </div>
+    <section class="picture_area_container">
+        <picture class="img__item-1">
+            <source srcset="./img/1.png" media="(min-width:1024px)">
+            <source srcset="./img/1024/1.png" media="(min-width:321px)">
+            <source srcset="img/320/1.png" media="(max-width:320px)">
+            <img src="img/1.png" alt="img" class="img img__item-1">
+        </picture>
+        <picture class="img__item-2">
+            <source srcset="./img/2.png" media="(min-width:1024px)">
+            <source srcset="./img/1024/2.png" media="(min-width:321px)">
+            <source srcset="/img/320/2.png" media="(max-width:320px)">
+            <img src="/img/2.png" alt="img" class="img img__item-2">
+        </picture>
+        <picture class="img__item-3">
+            <source srcset="./img/3.png" media="(min-width:1024px)">
+            <source srcset="./img/1024/3.png" media="(min-width:321px)">
+            <source srcset="/img/320/3.png" media="(max-width:320px)">
+            <img src="/img/3.png" alt="img" class="img img__item-3">
+        </picture>
+        <picture class="img__item-4">
+            <source srcset="./img/4.png" media="(min-width:1024px)">
+            <source srcset="./img/1024/4.png" media="(min-width:321px)">
+            <source srcset="./img/320/4.png" media="(max-width:320px)">
+            <img src="/img/4.png" alt="img" class="img img__item-4">
+        </picture>
+        <picture class="img__item-5">
+            <source srcset="./img/5.png" media="(min-width:1024px)">
+            <source srcset="./img/1024/5.png" media="(min-width:321px)">
+            <source srcset="./img/320/5.png" media="(max-width:320px)">
+            <img src="/img/5.png" alt="img" class="img img__item-5">
+        </picture>
+        <picture class="img__item-6">
+            <source srcset="./img/6.png" media="(min-width:1024px)">
+            <source srcset="./img/1024/6.png" media="(min-width:321px)">
+            <source srcset="/img/320/6.png" media="(max-width:320px)">
+            <img src="img/6.png" alt="img" class="img img__item-6">
+        </picture>
+        <picture class="img__item-7">
+            <source srcset="./img/7.png" media="(min-width:1024px)">
+            <source srcset="./img/1024/7.png" media="(min-width:321px)">
+            <source srcset="/img/320/7.png" media="(max-width:320px)">
+            <img src="/img/7.png" alt="img" class="img img__item-7">
+        </picture>
+    </section>
+    <div class="jon_doe">>
+        <div class="jon_doe_arrows_l"></div>
+            <img src="img/face.png" alt="">
+            <section>
+                <p class="jon_doe_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque nec diam platea ullamcorper feugiat amet. Id aliquet vehicula feugiat arcu arcu nulla ornare. Sed amet venenatis, massa sit.</p>
+                <hr class="jon_doe_hr">
+                <h4 class="james">James Philips</h4>
+            </section>
+            <div class="jon_doe_arrows_r"></div>
+        </div>
+    </div>
+</div>
+    <div class="happy_clients">
+        <div class="mixin_text">
+            <h2>Happy Clients</h2>
+            <h3>WHAT PEOPLE SAY</h3>
+            <hr>
+        </div>
+        <section class="clients">
+            <img class="clienst_photo" src="img/phillip.png" alt="">
+            <div class="phil">
+                <h4>PHILLIP CULHANE</h4>
+                <h5>PHOTOGRAPHER</h5>
+                <hr class="jon_doe_hr">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis proin varius vitae leo eget tincidunt duis amet. Et amet dis vel imperdiet volutpat mauris est leo cursus.</p>
+            </div>
+            <img class="clienst_photo" src="img/paityn.png" alt="">
+            <div class="pai">
+                <h4>PAITYN PRESS</h4>
+                <h5>PHOTOGRAPHER</h5>
+                <hr class="jon_doe_hr">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis proin varius vitae leo eget tincidunt duis amet. Et amet dis vel imperdiet volutpat mauris est leo cursus.</p>
+            </div>
+        </section>
+        <section class="clients">
+            <img class="clienst_photo" src="img/dulce.png" alt="">
+            <div class="dul">
+                <h4>DULCE GOUSE</h4>
+                <h5>PHOTOGRAPHER</h5>
+                <hr class="jon_doe_hr">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis proin varius vitae leo eget tincidunt duis amet. Et amet dis vel imperdiet volutpat mauris est leo cursus.</p>
+            </div>
+            <img class="clienst_photo" src="img/zaire.png" alt="">
+            <div class="zai">
+                <h4>ZAIRE SCHLEIFER</h4>
+                <h5>PHOTOGRAPHER</h5>
+                <hr class="jon_doe_hr">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis proin varius vitae leo eget tincidunt duis amet. Et amet dis vel imperdiet volutpat mauris est leo cursus.</p>
+            </div>
+        </section>
+    </div>
+    <div class="our_stories">
+        <div class="mixin_text">
+            <h2>What we do</h2>
+            <h3>SOME OF OUR WORKS</h3>
+            <hr>
+        </div>
+        <section class="our_stories_img">
+        <div>
+            <img src="img/ourstories.png" alt="">
+            <div class="box">
+                <span>15</span>
+                <span>JAN</span>
+            </div>
+            <h4>Lorem ipsum dolor sit amet</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis proin varius vitae leo eget tincidunt duis amet. Et amet dis vel imperdiet volutpat mauris est leo cursus.</p>
+            <div class="comments">
+            <img src="img/542.png" alt=""><p>542</p><img src="img/17.png" alt=""><p>17</p>
+        </div>
+        </div>
+        <div>
+            <img src="img/ourstories.png" alt="">
+            <div class="box">
+                <span>15</span>
+                <span>JAN</span>
+            </div>
+            <h4>Lorem ipsum dolor sit amet</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis proin varius vitae leo eget tincidunt duis amet. Et amet dis vel imperdiet volutpat mauris est leo cursus.</p>
+            <div class="comments">
+                <img src="img/542.png" alt=""><p>542</p><img src="img/17.png" alt=""><p>17</p>
+            </div>
+        </div>
+        <div>
+            <img src="img/ourstories.png" alt="">
+            <div class="box">
+                <span>15</span>
+                <span>JAN</span>
+            </div>
+            <h4>Lorem ipsum dolor sit amet</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis proin varius vitae leo eget tincidunt duis amet. Et amet dis vel imperdiet volutpat mauris est leo cursus.</p>
+            <div class="comments">
+                <img src="img/542.png" alt=""><p>542</p><img src="img/17.png" alt=""><p>17</p>
+            </div>
+        </div>
+        </section>
+            <div class="latest">
+                <img src="img/iconlatest.png" alt="">
+                <h4>LATEST BLOG</h4>
+                <hr class="latest_hr">
+            </div>
     </main>
 </body>
 </html>
