--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.scss">
+    <link rel="stylesheet" href="style/style.css">
     <script type="module" src="app.js"></script>
 </head>
 
